# mango_smoothie

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
docs/: index.html  macro.query.html  macro.query_type.html  search-index.js  sidebar-items.js
docs/database/: fn.database.html
docs/errors/: enum.Error.html
docs/http/: fn.get.html  fn.post.html
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/std/error/: trait.Error.js
docs/mango_smoothie/: database.v.html  fn.database.html  index.html  query_type.m.html  sidebar-items.js
docs/mango_smoothie/errors/: enum.Error.html  index.html
docs/mango_smoothie/http/: index.html
docs/src/mango_smoothie/: database.rs.html  errors.rs.html  http.rs.html  lib.rs.html
docs/src/mango_smoothie/src/: database.rs.html  errors.rs.html  http.rs.html  lib.rs.html  query.rs.html
src/: database.rs  errors.rs  http.rs  ignoremain.rs  lib.rs  main.rs  query.rs
tests/: create.rs  find.rs  http.rs  list.rs  query.rs  test_setup.js
