[package]
name = "mango_smoothie"
version = "0.1.0"
authors = ["Garren Smith <garren.smith@gmail.com>"]
license = "MIT"
description = "A client side library for CouchDB Mango/Cloudant Query"
repository = "https://github.com/garrensmith/mango_smoothie"
documentation = "https://docs.rs/mango_smoothie/"
keywords = ["couchdb", "database", "nosql", "mango"]
exclude = [
    "node_modules"
]

[dependencies]
hyper = "0.9.10"
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
